# move-unscrambler

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
compat/: Cargo.toml
compat/src/: compat.rs  context.rs  lib.rs  mutator.rs  utils.rs
compat/src/convert/: mod.rs
compat/src/detect/: address_length.rs  mod.rs
compat/tests/: adapter.rs
libra/: Cargo.toml
libra/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
notes/: TODO.md
poc/: Cargo.toml
poc/src/: disassembler.rs  main.rs
reachability/: Cargo.toml
reachability/src/: lib.rs
src/: main.rs
src/analyse/: pipeline.rs
src/cli/: logging.rs  mod.rs
src/data/: mod.rs
src/disasm/: disassembler.rs  mod.rs  uni.rs
src/extract/: fn_addr.rs  fn_handles.rs  functions.rs  mod.rs  mod_addr.rs  mod_handles.rs  move_type.rs  struct_map.rs
src/output/: ctx.rs  mod.rs  tmt.rs  utils.rs
src/output/templates/: doc.hbs.html  doc.hbs.md
src/types/: block_addr.rs  fn_addr.rs  mod.rs  mod_addr.rs  struct_addr.rs
