[package]
name = "libra-deps"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]

[target.'cfg(not(wasm32))'.dependencies]
bytecode-verifier = { package = "bytecode-verifier", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
bytecode-source-map = { package = "bytecode-source-map", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
ir-to-bytecode-syntax = { package = "ir-to-bytecode-syntax", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
libra-types = { package = "libra-types", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
libra-workspace-hack = { package = "libra-workspace-hack", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
move-core-types = { package = "move-core-types", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
move-ir-types = { package = "move-ir-types", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
move-coverage = { package = "move-coverage", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
vm = { package = "vm", git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }
move-lang = { git = "https://github.com/libra/libra.git", rev = "6190f23a37cd4c4f9e4b4ecf1eb650265c03429c" }

# bytecode-verifier = { package = "bytecode-verifier", git = "https://github.com/dfinance/libra.git" }
# bytecode-source-map = { package = "bytecode-source-map", git = "https://github.com/dfinance/libra.git" }
# ir-to-bytecode-syntax = { package = "ir-to-bytecode-syntax", git = "https://github.com/dfinance/libra.git" }
# libra-types = { package = "libra-types", git = "https://github.com/dfinance/libra.git" }
# libra-workspace-hack = { package = "libra-workspace-hack", git = "https://github.com/dfinance/libra.git" }
# move-core-types = { package = "move-core-types", git = "https://github.com/dfinance/libra.git" }
# move-ir-types = { package = "move-ir-types", git = "https://github.com/dfinance/libra.git" }
# move-coverage = { package = "move-coverage", git = "https://github.com/dfinance/libra.git" }
# vm = { package = "vm", git = "https://github.com/dfinance/libra.git" }

[target.'cfg(wasm32)'.dependencies]
# TODO: support wasm target


[features]
default = []
