[package]
name = "describr"
version = "0.1.0"
authors = ["Alex Koz. <a@koz.email>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.31"
colored = "1.9.3"
structopt = "0.3.15"

bytecode-verifier = { package = "bytecode-verifier", git = "https://github.com/dfinance/libra.git" }
bytecode-source-map = { package = "bytecode-source-map", git = "https://github.com/dfinance/libra.git" }
ir-to-bytecode-syntax = { package = "ir-to-bytecode-syntax", git = "https://github.com/dfinance/libra.git" }
libra-types = { package = "libra-types", git = "https://github.com/dfinance/libra.git" }
libra-workspace-hack = { package = "libra-workspace-hack", git = "https://github.com/dfinance/libra.git" }
move-core-types = { package = "move-core-types", git = "https://github.com/dfinance/libra.git" }
move-ir-types = { package = "move-ir-types", git = "https://github.com/dfinance/libra.git" }
move-coverage = { package = "move-coverage", git = "https://github.com/dfinance/libra.git" }
vm = { package = "vm", git = "https://github.com/dfinance/libra.git" }

railroad = "0.1.1"

[features]
default = []
