[package]
name = "reachability"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
libra-canonical-serialization = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
vm-genesis = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
bytecode-verifier = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
bytecode-source-map = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }
move-coverage = { git = "https://github.com/dfinance/libra.git", branch = "16.06.2020" }

#dialects = { git = "https://github.com/dfinance/move-tools.git", branch = "master" }
dialects = { path = "../../move-tools/crates/dialects" }